--- a/src/learn-english/packages.config
+++ b/src/learn-english/packages.config
@@ -5,4 +5,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net40-client" />
   <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net40-client" />
   <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net40-client" />
+  <package id="System.Data.SQLite.x64" version="1.0.111.0" targetFramework="net40-client" />
 </packages>
